--- a/toiletwayfinderadmin.html
+++ b/toiletwayfinderadmin.html
@@ -3,16 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="toilet.css">
-	<link rel="icon" href="images/logo.ico">
+	<link rel="icon" href="images/logo.ico">	
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9fxFh1sqOfxvNB56Pqc3SWnXqBCAwQ_8&callback=googleMap"></script>
-	<title> Toilet Wayfinder | Public</title>
+	<title>Toilet Wayfinder | Admin</title>
     
 </head>  
+
 <body>
 	<section>
 	<!--Logo-->
 		<br>
-		<a href="toiletwayfinderpublic.html"><img src="images/logo2.png" alt="banner" height= "100"/></a>
+		<a href="toiletwayfinderadmin.php"><img src="images/logo2.png" alt="banner" height= "100"/></a>
 		<br>
 		<hr>
 		
@@ -24,21 +25,23 @@
 	<!--Map-->
         <div id="map"></div>
 	</section>
-    </body>	
-  <script>
- 
+    </body>
+<script>
+
     var im = 'https://titan.csit.rmit.edu.au/~s3430923/pp/locator.png';
     function currentLocation(){
         navigator.geolocation.getCurrentPosition(initialize,error);
     }
 
- function initialize(position) {
-      var myLatLng = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
-      map = new google.maps.Map(document.getElementById('map'), {
-      zoom: 17,
-      center: myLatLng,
-      mapTypeId: google.maps.MapTypeId.ROADMAP
-    });
+    function initialize(position) {
+        var myLatLng = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
+        var mapOptions = {
+          zoom: 17,
+          center: myLatLng,
+          mapTypeId: google.maps.MapTypeId.ROADMAP
+        }
+        map = new google.maps.Map(document.getElementById('map'),
+                                      mapOptions);
         var userMarker = new google.maps.Marker({
             position: myLatLng,
             map: map,
@@ -130,7 +133,7 @@ function googleMap() {
       ['Public Toilet - Toilet 52 - Princes Park (Adjacent Southern Sports Pavilion)', -37.7879048271477,144.959494790772, 77],
       ['Public Toilet - Toilet 133- Canning Street Reserve (49 Princes Street)', -37.7930116787258,144.973994897618, 78]
         ];
-      map = new google.maps.Map(document.getElementById('map'), {
+         var map = new google.maps.Map(document.getElementById('map'), {
       zoom: 17,
       center: new google.maps.LatLng(-37.808272, 144.96264629999996),
       mapTypeId: google.maps.MapTypeId.ROADMAP
@@ -152,8 +155,21 @@ function googleMap() {
         }
       })(marker, i));
     }
+google.maps.event.addListener(map, 'click', function(event) {
+   placeMarker(event.latLng);
+});
+
+function placeMarker(location) {
+    var pmarker = new google.maps.Marker({
+        position: location, 
+        map: map
+    });
+    marker.setMap(map);
+    
+    marker.setMap(null);
+    }
 }
-    </script>	
+</script>	
 <footer>Return to <a href="index.html">Index</a>
 </footer>
 </html>	
